Wed Mar  9 14:20:18 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerate, fix paths to HTPB and Kokyu libraries.

Wed Mar 09 21:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMI_Buffering/AMI_Buffering.h:
        * tests/AMI_Buffering/AMI_Buffering_Admin.h:
        * tests/AMI_Buffering/Reply_Handler.h:
        * tests/Big_Oneways/Coordinator.h:
        * tests/Big_Oneways/Peer.h:
        * tests/Big_Oneways/Session.h:
        * tests/Big_Oneways/Session_Control.h:
        * tests/Big_Reply/Big_Reply_i.h:
        * tests/Big_Request_Muxing/Payload_Receiver.h:
          Removed check for deprecated msvc version

Wed Mar 09 19:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/default_resource.cpp:
          Removed debug statement

Wed Mar 09 16:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

         * tao/ImR_Client/ImR_Client_Adapter_Impl.cpp:
           Fixed a bug in the deletion of the server object. When it was
           registered on the root poa the root poa pointer is zero, so
           we throw an exception. Reverted back to the way it was before
           the refactoring, get the poa from the server object and use
           that

Wed Mar 09 11:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/idl_make_vars:
          Removed this file, it is not used anymore

Wed Mar 09 08:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Collocated_Invocation.cpp (invoke):
          Get the servant orb from the effective target, this matches the
          way we detect if we can use a collocated call or not. This fixes
          the crashing of the TAO test Bug_1495_Regression in our daily
          builds which was testing a forward location from a remote to a
          collocated servant

Wed Mar 09 08:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/*S.{h,cpp,inl}: